# none-editor

./: .gitignore  Cargo.toml  rustfmt.toml
.cargo/: config
src/: buffer.rs  canvas.rs  commands.rs  cursor.rs  fontcache.rs  keybinding.rs  main.rs  nanovg.rs  palette.rs  styling.rs  system.rs  view.rs  widget.rs  window.rs
src/config/: default.json
