[package]
name = "yoers"
version = "0.1.0"
authors = ["Mathieu PEPONAS <m.peponas@gmail.com>"]

[dependencies]
# gl = "0.10.0"
ropey = "0.8.4"
num = "0.2.0"
clipboard2 = "0.1.0"
euclid = "0.19.0"
rect_packer = "0.2.1"
# [dependencies.nanovg]
# version = "0.4.2"
# features = ["gl3"]

[dependencies.sdl2]
version = "0.31.0"
features = ["ttf"]