[package]
name = "nonedit"
version = "0.1.0"
authors = ["Mathieu PEPONAS <m.peponas@gmail.com>"]

[dependencies]
ropey = "0.8.4"
num = "0.2.0"
clipboard2 = "0.1.0"
euclid = "0.19.0"
rect_packer = "0.2.1"
lazy_static = "1.1.0"
bitflags = "1.0"
config = "0.9.0"
directories = "1.0"
syntect = "2.1"
nfd = "0.0.4"
chardet = "0.2"
encoding = "0.2"

[dependencies.sdl2]
version = "0.31.0"
features = ["ttf"]