[package]
name = "nonedit"
version = "0.1.0"
authors = ["Mathieu PEPONAS <m.peponas@gmail.com>"]
edition = "2018"

[dependencies]
ropey = "1.0"
num = "0.2.0"
clipboard2 = "0.1.0"
euclid = "0.19.0"
rect_packer = "0.2.1"
lazy_static = "1.1.0"
bitflags = "1.0"
config = "0.9.0"
directories = "1.0"
syntect = "3.0"
nfd = "0.0.4"
chardet = "0.2"
encoding = "0.2"
gl = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.nanovg]
# version = "1.0"
git = "https://github.com/pepone42/nanovg-rs.git"
features = ["gl3","freetype"]

[dependencies.glutin]
version = "0.19"
features = ["serde"]

[profile.release]
debug = true
